# scribbles

./: .editorconfig  .gitignore  CMakeLists.txt  env.cpp  env.hpp  main.cpp  words.txt
data/: words.txt
lib/: CMakeLists.txt  env.cpp  env.h
